versions/v1.6/modules/en/pages/installation-setup/single-node-clusters.adoc
= Single-Node Clusters
:description: Understand the deployment, features, and limitations of single-node clusters for SUSE Virtualization
:revdate: 2025-07-16
:page-revdate: {revdate}

{harvester-product-name} supports single-node clusters for implementations that can tolerate lower resilience or require minimal initial deployment resources. You can create single-node clusters using the standard installation methods (xref:/installation-setup/methods/iso-install.adoc[ISO], xref:/installation-setup/methods/usb-install.adoc[USB], and xref:/installation-setup/methods/pxe-boot-install.adoc[PXE boot]).

Single-node clusters support most {harvester-product-name} features, including the creation of RKE2 clusters and node upgrades (with some limitations). However, this deployment type has the following key disadvantages:

* No high availability: Errors and updates that require rebooting of the node cause downtime to running virtual machines.
* No live migration and zero-downtime support during upgrades.

== Prerequisites

Before you begin deploying your single-node cluster, ensure that the following requirements are met.

* Hardware: xref:/installation-setup/requirements.adoc#_hardware_requirements[Use server-class hardware] with sufficient resources to run {harvester-product-name} and a production workload. Laptops and nested virtualization are not supported.
* Network: xref:/installation-setup/requirements.adoc#_port_requirements_for_nodes[Configure ports] based on the type of traffic to be transmitted among virtual machines.

== Replica Count of the Default StorageClass

{harvester-product-name} uses StorageClasses to describe how {longhorn-product-name} must provision volumes. Each StorageClass has a parameter that defines the number of replicas to be created for each volume.

The default StorageClass `harvester-longhorn` has a replica count value of *3* for high availability. If you use `harvester-longhorn` in your single-node cluster, {longhorn-product-name} is unable to create the default number of replicas, and volumes are marked as _Degraded_ on the *Volumes* screen of the UI.

To avoid this issue, you can perform either of the following actions:

* Change the xref:/installation-setup/config/configuration-file.adoc#_install_harvester_storage_class_replica_count[replica count] of `harvester-longhorn` to *1* using a xref:/installation-setup/config/configuration-file.adoc[configuration file].
* xref:/storage/storageclass.adoc#_creating_a_storageclass[Create a new StorageClass] with the *Number of Replicas* parameter set to *1*. Once created, locate the new StorageClass in the list and then select *⋮* > *Set as Default*.

== Multiple Replicas on a Node with Multiple Disks

{longhorn-product-name} creates only one replica for each volume even if the node has multiple disks because *Replica Hard Anti-Affinity* is enabled by default. When a healthy replica already exists on a node, the scheduler is prevented from scheduling new replicas of the same volume on the node.

In high-availability clusters, *Replica Hard Anti-Affinity* ensures volume redundancy. However, this same mechanism can cause volumes to become degraded in single-node clusters (since no other nodes are available for scheduling of new replicas).

If you want {longhorn-product-name} to create multiple replicas on a node with multiple disks, perform the following steps:

. Enable https://documentation.suse.com/cloudnative/storage/1.9/en/longhorn-system/settings.html#_replica_node_level_soft_anti_affinity[`Replica Node Level Soft Anti-Affinity`]: When this setting is enabled, {longhorn-product-name} schedules new replicas on nodes with existing healthy replicas of the same volume.
. Disable https://documentation.suse.com/cloudnative/storage/1.9/en/longhorn-system/settings.html#_replica_disk_level_soft_anti_affinity[`Replica Disk Level Soft Anti-Affinity`]: When this setting is disabled, {longhorn-product-name} does not schedule new replicas on disks with existing healthy replicas of the same volume. Disabling this setting provides failure tolerance for disks in single-node clusters.
. (Optional) xref:../storage/storageclass.adoc#_creating_a_storageclass[Create a new StorageClass] and specify the disk tags that must be matched during volume scheduling.

== Upgrades and Maintenance

Single-node clusters do not support xref:/virtual-machines/live-migration.adoc[Live Migration], so virtual machines become unavailable during cluster upgrades. {harvester-product-name} forcibly shuts down all virtual machines before starting the upgrade process. You can configure {harvester-product-name} to automatically restore running virtual machines using the `restoreVM` option of the xref:/installation-setup/config/settings.adoc#_upgrade_config[`upgrade-config`] setting.

Enabling xref:/hosts/hosts.adoc#_node_maintenance[Maintenance Mode] is also not possible because that operation relies on Live Migration functionality, and {harvester-product-name} cannot place the only control plane in Maintenance Mode.
